--- a/src/sass/layout/navbar.sass
+++ b/src/sass/layout/navbar.sass
@@ -9,9 +9,9 @@ nav
 	display: flex
 	justify-content: space-between
 	align-items: center
-	background: var(--bg-nav)
+	background: transparent
 	border-radius: calc( var(--radius) + .2rem)
-	box-shadow: var(--shadow)
+	box-shadow: none
 	padding: .4rem
 	width: 100%
 	margin: auto
